Prepare IDP endpoints crud
