# docs/openapi.yml
@@ -667,7 +667,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/NewCategoryRequest"
+                "$ref": "#/components/schemas/NewIDPRequest"
               }
             }
           },
@@ -2915,6 +2915,121 @@
             "title": "Code",
             "type": "string",
             "description": "Country code"
+          }
+        }
+      },
+      "NewIDPRequest": {
+        "title": "NewIDPRequest",
+        "type": "object",
+        "properties": {
+          "status": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DisplacedPersonStatus"
+              }
+            ],
+            "description": "Current status",
+            "default": "registered"
+          },
+          "reference_id": {
+            "title": "Reference Id",
+            "type": "string",
+            "description": "Reference ID, maybe some of state issued IDs etc."
+          },
+          "email": {
+            "title": "Email",
+            "type": "string",
+            "description": "Contact email"
+          },
+          "full_name": {
+            "title": "Full Name",
+            "type": "string",
+            "description": "Full name"
+          },
+          "birth_date": {
+            "title": "Birth Date",
+            "type": "string",
+            "description": "Birth date",
+            "format": "date-time"
+          },
+          "notes": {
+            "title": "Notes",
+            "type": "string",
+            "description": "Additional notes"
+          },
+          "phone_number": {
+            "title": "Phone Number",
+            "type": "string",
+            "description": "Primary phone number"
+          },
+          "phone_number_additional": {
+            "title": "Phone Number Additional",
+            "type": "string",
+            "description": "Displaced person ID"
+          },
+          "migration_date": {
+            "title": "Migration Date",
+            "type": "string",
+            "description": "Date when person has moved",
+            "format": "date-time"
+          },
+          "from_place_id": {
+            "title": "From Place Id",
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "uuid"
+              },
+              {
+                "type": "string"
+              }
+            ],
+            "description": "Place of origin city/town/village"
+          },
+          "current_place_id": {
+            "title": "Current Place Id",
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "uuid"
+              },
+              {
+                "type": "string"
+              }
+            ],
+            "description": "Current or destination city/town/village"
+          },
+          "project_id": {
+            "title": "Project Id",
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "uuid"
+              },
+              {
+                "type": "string"
+              }
+            ],
+            "description": "Related project ID"
+          },
+          "category_id": {
+            "title": "Category Id",
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "uuid"
+              },
+              {
+                "type": "string"
+              }
+            ],
+            "description": "Vulnerability category ID"
+          },
+          "tags": {
+            "title": "Tags",
+            "type": "array",
+            "items": {},
+            "description": "List of tags"
           }
         }
       },
